--- a/routes-to-phone/src/app/auditorPerformance/auditorperformance.component.html
+++ b/routes-to-phone/src/app/auditorPerformance/auditorperformance.component.html
@@ -1,3 +1,11 @@
 <div> 
-  Auditor Performance Section
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Month<span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li *ngFor="let month of months"><a href="#">{{ month }}</a></li>
+    </ul>
+  </div>
+  <div [hidden]="!chartWeek1">
+    <canvas id="canvas1">{{ chartWeek1 }}</canvas>
+  </div>
 </div>
