--- a/routes-to-phone/src/app/auditorPerformance/auditorperformance.component.html
+++ b/routes-to-phone/src/app/auditorPerformance/auditorperformance.component.html
@@ -1,11 +1,20 @@
 <div> 
+  <!--
   <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Month<span class="caret"></span></button>
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Pick Date<span class="caret"></span></button>
     <ul class="dropdown-menu">
-      <li *ngFor="let month of months"><a href="#">{{ month }}</a></li>
+      <li *ngFor="let date of arrayOfDates; let i = index" (click)="setDate(i)"><a href="#">{{date | date: 'MM/dd/yyyy' }}</a></li>
     </ul>
   </div>
-  <div [hidden]="!chartWeek1">
-    <canvas id="canvas1">{{ chartWeek1 }}</canvas>
+  -->
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Pick Auditor<span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li *ngFor="let auditor of arrayOfAuditors; let i = index" ><a href="" (click)="setAuditor(i); false">{{ auditor.firstName}} {{ auditor.lastName }}</a></li>
+    </ul>
   </div>
+    <div [hidden]="!chartWeek1">
+      {{ this.chartLabel }}
+      <canvas id="canvas1">{{ chartWeek1 }}</canvas>
+    </div>
 </div>
