--- a/routes-to-phone/src/app/app.component.html
+++ b/routes-to-phone/src/app/app.component.html
@@ -1,23 +1,32 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Load Manifest</a>
+<div class="navbar">
+  <div class="containter-logo">
+    <div class="martin-brower-logo">
+      <img class="the-image" src="./assets/martin-brower.jpg" />
     </div>
-    <ul class="nav navbar-nav">
-      <li><a routerLink="/">Load to Database</a></li>
-      <li><a routerLink="/view">Configure Today's Hot Routes</a></li>
-      <li><a routerLink="/download">Get Manifestor</a></li>
-      <li><a routerLink="/reliability">Reliability</a></li>
-    </ul>
   </div>
-</nav>
+  <div class="nav-tabs-container">
+    <div class="nav-tab far-left">
+      <button *ngIf="auditSelected == false" class="nav-button" (click)="navigateAuditing()">
+      Auditing
+      </button>
 
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
-  <ul class="nav navbar-nav">
-    <li><a routerLink="/admin">Martin Brower</a></li>
-  </ul>
-</nav>
+      <button *ngIf="auditSelected == true" class="nav-button-on" (click)="navigateAuditing()">
+      Auditing
+      </button>
 
+    </div>
+    <div class="nav-tab">
+      <button *ngIf="archiveSelected == false" class="nav-button" (click)="navigateArchives()">
+      Archives
+      </button>
+
+      <button *ngIf="archiveSelected == true" class="nav-button-on" (click)="navigateArchives()">
+      Archives
+      </button>
+
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
 
 
