--- a/routes-to-phone/src/app/chartPage/chart.component.css
+++ b/routes-to-phone/src/app/chartPage/chart.component.css
@@ -1,10 +1,10 @@
-.routesView{
-  height: 225px;
-  overflow: auto; 
+.thePage{
+  margin: auto;
+  padding: 1% 0% 0% 0%;
+  position: relative;
+  height: 30%;
+  width: 60%;
+
 }
 
-.errorsView{
-  height: 225px;
-  overflow: auto;
-  margin: -20px -15px 0px -15px;
-}
+
